--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@ant-design/icons": "^5.0.1",
     "@ant-design/pro-components": "^2.4.4",
     "@umijs/max": "^4.4.11",
-    "antd": "^5.4.0"
+    "antd": "^5.4.0",
+    "antd-img-crop": "^4.25.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
