--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@ant-design/pro-components": "^2.4.4",
+    "@types/crypto-js": "^4.2.2",
     "@umijs/max": "^4.4.11",
     "antd": "^5.4.0",
-    "antd-img-crop": "^4.25.0"
+    "antd-img-crop": "^4.25.0",
+    "crypto-js": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
