--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@umijs/max": "^4.4.11",
     "antd": "^5.4.0",
     "antd-img-crop": "^4.25.0",
-    "crypto-js": "^4.2.0"
+    "crypto-js": "^4.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
